@@ -936,19 +936,16 @@ public class JobClient extends Configured implements MRConstants, Tool  {
   throws IOException {
     FileStatus[] contents = fs.listStatus(jobDirPath);
     int matchCount = 0;
-    if (contents != null && contents.length >=3) {
+    if (contents != null && contents.length >=2) {
       for (FileStatus status : contents) {
         if ("job.xml".equals(status.getPath().getName())) {
-          ++matchCount;
-        }
-        if ("job.jar".equals(status.getPath().getName())) {
           ++matchCount;
         }
         if ("job.split".equals(status.getPath().getName())) {
           ++matchCount;
         }
       }
-      if (matchCount == 3) {
+      if (matchCount == 2) {
         return true;
       }
     }
