@@ -863,6 +863,11 @@ Release 0.20.1 - Unreleased
     HADOOP-5908. Fixes a problem to do with ArithmeticException in the 
     JobTracker when there are jobs with 0 maps. (Amar Kamat via ddas)
 
+    HADOOP-5924. Fixes a corner case problem to do with job recovery with
+    empty history files. Also, after a JT restart, sends KillTaskAction to 
+    tasks that report back but the corresponding job hasn't been initialized
+    yet. (Amar Kamat via ddas)
+
 Release 0.20.0 - 2009-04-15
 
   INCOMPATIBLE CHANGES
